--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,19 @@
 body {
+  
   font-family: 'Arial', sans-serif;
   background-color: #f0f0f0;
-  margin: 0;
-  padding: 0;
+  background-image: url(../img/bomb.png);
+  background-repeat: no-repeat;
+  position: relative;
+  margin: 0 auto;
 }
 
 h1 {
-  color: #333;
+  text-decoration: underline;
+  color: red;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 #result .green {
   color: #2ecc71;
@@ -14,4 +21,69 @@ h1 {
 
 #result .red {
   color: #e74c3c;
+}
+
+p {
+  font-size: 30px;
+  font-weight: bold;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}
+div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#userInput{
+  font-size: 20px;
+  font-weight: bold;
+  border: 3px solid black;
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+align-items: center;
+width: 50px;
+padding: 10px 20px 10px 50px;
+position: absolute;
+  top: 150%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+
+#restart{
+color: white;
+background-color: rgb(59, 104, 239);
+font-size: 20px;
+  font-weight: bold;
+  border: 3px solid black;
+
+position: absolute;
+top: 400%;
+left: 50%;
+transform: translate(-50%, -50%);
+width: 200px;
+padding: 10px 20px 10px 20px;
+}
+
+#countdown{
+  font-size: 20px;
+  font-weight: bold;
+  border: 3px solid black;
+  background-color: rgb(59, 104, 239);
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+align-items: center;  
+  color: white;
+  width: 100px;
+  
+padding: 10px 10px 10px 10px;
+position: absolute;
+  top: 210%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
